# pillar-inflation

./: .gitignore  CLAUDE.md  MODEL.md  README.md
.github/workflows/: ci.yml  deploy-pages.yml
python/: pyproject.toml
python/src/pillar_sim/: __init__.py  cli.py  engine.py  fixtures.py  params.py  plots.py  rewards.py  scenarios.py  state.py  strategy.py
python/tests/: test_baseline.py  test_extensions.py  test_invariants.py  test_lock_threshold.py
shared/fixtures/: baseline_1to10.json  baseline_1to3.json  baseline_1to4.json  baseline_1to5.json  baseline_1to6.json  baseline_1to7.json  baseline_1to8.json  baseline_1to9.json  delegation_heavy_swap10.json  delegation_off_lock_1to7.json  dilute_growth_swap10.json  dilute_swap10.json  index.json  lock_1to10.json  lock_1to3.json  lock_1to5.json  lock_1to7.json  long_horizon_swap7.json  low_swap_1to1.json  operator_keeps_all_swap10.json  promote_max1_swap10.json
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ChartBalances.tsx  ChartFlows.tsx  ChartInflationShare.tsx  ChartNextCost.tsx  ChartPillarCount.tsx  ChartSwapSweep.tsx  MathBreakdown.tsx  ParamField.tsx  ParamsPanel.tsx  ScenarioTable.tsx
web/src/sim/: engine.ts  params.ts  rewards.ts  state.ts  strategy.ts
web/src/sim/__tests__/: engine.test.ts
web/src/state/: useParamsStore.ts  useSim.ts
